--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,14 @@
 }
 .theme-blue{
     --color-primary:hsl(247,100%,73%);
+    --color-primary-variant:hsla(247, 100%, 73%, 0.473);
     --color-secondary:hsl(247,100%,79%);
     --color-tertiary:hsla(247, 100%, 73%, 0.199);
     --color-tertiary-variant:hsla(247, 100%, 73%, 0.082);
 }
 .theme-green{
     --color-primary:hsl(120,100%,35%);
+    --color-primary-variant:hsla(120, 100%, 35%, 0.474);
     --color-secondary:hsl(120,100%,70%);
     --color-tertiary:hsla(120, 100%, 70%, 0.17);
     --color-tertiary-variant:hsla(120, 100%, 70%, 0.068);
