--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -1,5 +1,7 @@
-.home{
-width: 100%;
-height: 100vh;
-color:aqua;
-}
+.no-scrollbar::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari, and Edge */
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+  }
