fix: gauge component color issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
         --color-danger-variant:#ff0d3d1f;
         --color-warning:#fd7418;
         --color-warning-variant:#fd74181f;
-        --color-alert:#dbfd04;
+        --color-alert:#c2c200;
         --color-normal:#8575ff;
         --color-normal-variant:#8575ff1f;
         scroll-behavior: smooth;
